--- a/r-ver/3.5.2/Dockerfile.rhel
+++ b/r-ver/3.5.2/Dockerfile.rhel
@@ -59,6 +59,7 @@ RUN date \
   && echo "options(repos = c(CRAN = 'https://cran.rstudio.com/'), download.file.method = 'libcurl')" >> /usr/local/lib/R/etc/Rprofile.site \
   ## Add a library directory (for user-installed packages)
   && mkdir -p /usr/local/lib/R/site-library \
+  && groupadd staff \
   && chown root:staff /usr/local/lib/R/site-library \
   && chmod g+wx /usr/local/lib/R/site-library \
   ## Fix library path
@@ -71,13 +72,13 @@ RUN date \
   && export MRAN=$MRAN \
   && echo "options(repos = c(CRAN='$MRAN'), download.file.method = 'libcurl')" >> /usr/local/lib/R/etc/Rprofile.site \
   ## Use littler installation scripts
-  && Rscript -e "install.packages(c('littler', 'docopt'), repo = '$MRAN')" \
+  && /usr/local/bin/Rscript -e "install.packages(c('littler', 'docopt'), repo = '$MRAN')" \
   && ln -s /usr/local/lib/R/site-library/littler/examples/install2.r /usr/local/bin/install2.r \
   && ln -s /usr/local/lib/R/site-library/littler/examples/installGithub.r /usr/local/bin/installGithub.r \
   && ln -s /usr/local/lib/R/site-library/littler/bin/r /usr/local/bin/r \
   ## Clean up from R source install
   && cd / \
-  && rm -rf /tmp/* \
+  && rm -rf /tmp/R-* \
 ##  && yum -y erase bzip2-devel gcc gcc-c++ gcc-gfortran java-1.8.0-openjdk java-1.8.0-openjdk-devel libX11-devel \
 ##  libXt-devel libcurl-devel libicu-devel libjpeg-turbo-devel libpng-devel m4 make pcre-devel perl readline-devel \ 
 ##  tcl-devel tk-devel unzip xorg-x11-xauth xz-devel alsa-lib atk avahi-libs cairo copy-jdk-configs cpp cups-libs \ 
@@ -99,11 +100,4 @@ RUN date \
   && yum clean all
 
 CMD ["R"]
-
-
-
-
-
-
-
 
