Cleanup more to reduce image size

--- a/r-ver/3.5.2/Dockerfile.rhel
+++ b/r-ver/3.5.2/Dockerfile.rhel
@@ -19,7 +19,8 @@ RUN date \
   && yum-config-manager --enable rhel-7-server-extra-rpms \
   && yum-config-manager --enable rhel-7-server-optional-rpms \
   && yum -y install R \
-  && yum clean all
+  && yum clean all \
+  && rm -rf /var/cache/yum
 
 CMD ["R"]
 
