--- a/rstudio/3.5.2/Dockerfile.rhel
+++ b/rstudio/3.5.2/Dockerfile.rhel
@@ -8,14 +8,19 @@ FROM localhost/rhel7/rocker/r-ver
 #ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=2
 #ENV PATH=/usr/lib/rstudio-server/bin:$PATH
 #ENV PANDOC_TEMPLATES_VERSION=${PANDOC_TEMPLATES_VERSION:-2.6}
+ENV PASSWORD=redhat1
 
 ## Download and install RStudio server & dependencies
 RUN yum -y install wget \
   && wget https://download2.rstudio.org/rstudio-server-rhel-1.1.453-x86_64.rpm \
   && yum -y install rstudio-server-rhel-1.1.453-x86_64.rpm \
+  && rm -f rstudio-server-rhel-1.1.453-x86_64.rpm \
+  && yum clean all \
+  && rm -rf /var/cache/yum \
   && mkdir /home/rstudio-server \
-  &&  chown 'rstudio-server:rstudio-server' /home/rstudio-server \
-  && echo 'auth-minimum-user-id=0' >> /etc/rstudio/rserver.conf
+  && chown 'rstudio-server:rstudio-server' /home/rstudio-server \
+  && echo 'auth-minimum-user-id=0' >> /etc/rstudio/rserver.conf \
+  && echo "rstudio-server:$PASSWORD" | chpasswd 
 
 #COPY userconf.sh /etc/cont-init.d/userconf
 
@@ -27,7 +32,7 @@ RUN yum -y install wget \
 EXPOSE 8787
 
 ## automatically link a shared volume for kitematic users
-#VOLUME /home/rstudio/kitematic
+#VOLUME /home/rstudio-server/kitematic
 
 #CMD ["/init"]
 CMD ["/usr/lib/rstudio-server/bin/rserver","--server-daemonize=0","--www-port=8787"]
