Use Environment var to set version

--- a/r-ver/3.5.2/Dockerfile.rhel
+++ b/r-ver/3.5.2/Dockerfile.rhel
@@ -6,7 +6,7 @@ LABEL org.label-schema.license="GPL-2.0" \
 ARG R_VERSION
 ARG BUILD_DATE
 ENV BUILD_DATE=${BUILD_DATE:-2019-03-11}
-ENV R_VERSION=${R_VERSION:-3.5.2} \
+ENV R_VERSION=${R_VERSION:-3.5.2-2} \
     LC_ALL=en_US.UTF-8 \
     LANG=en_US.UTF-8 \
     TERM=xterm
@@ -18,7 +18,7 @@ RUN date \
   && yum-config-manager --enable rhel-7-server-rpms \
   && yum-config-manager --enable rhel-7-server-extra-rpms \
   && yum-config-manager --enable rhel-7-server-optional-rpms \
-  && yum -y install R \
+  && yum -y install R-${R_VERSION}.el7 \
   && yum clean all \
   && rm -rf /var/cache/yum
 
