--- a/rstudio/3.5.2/Dockerfile.rhel
+++ b/rstudio/3.5.2/Dockerfile.rhel
@@ -1,20 +1,21 @@
-FROM localhost/rhel7/rocker/r-ver
+FROM quay.io/danclark/r-ver:3.5.2
 
-#ARG RSTUDIO_VERSION
-#ENV RSTUDIO_VERSION=${RSTUDIO_VERSION:0.1.463}
-#ARG S6_VERSION
-#ARG PANDOC_TEMPLATES_VERSION
-#ENV S6_VERSION=${S6_VERSION:-v1.21.7.0}
-#ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=2
-#ENV PATH=/usr/lib/rstudio-server/bin:$PATH
-#ENV PANDOC_TEMPLATES_VERSION=${PANDOC_TEMPLATES_VERSION:-2.6}
-ENV PASSWORD=redhat1
+ARG RSTUDIO_VERSION
+ENV RSTUDIO_VERSION=${RSTUDIO_VERSION:-1.1.463}
+ARG S6_VERSION
+ARG PANDOC_TEMPLATES_VERSION
+ARG PASSWORD
+ENV S6_VERSION=${S6_VERSION:-v1.21.7.0}
+ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=2
+ENV PATH=/usr/lib/rstudio-server/bin:$PATH
+ENV PANDOC_TEMPLATES_VERSION=${PANDOC_TEMPLATES_VERSION:-2.6}
+ENV PASSWORD=${PASSWORD:-redhat1}
 
 ## Download and install RStudio server & dependencies
 RUN yum -y install wget \
-  && wget https://download2.rstudio.org/rstudio-server-rhel-1.1.453-x86_64.rpm \
-  && yum -y install rstudio-server-rhel-1.1.453-x86_64.rpm \
-  && rm -f rstudio-server-rhel-1.1.453-x86_64.rpm \
+  && wget https://download2.rstudio.org/rstudio-server-rhel-${RSTUDIO_VERSION}-x86_64.rpm \
+  && yum -y install rstudio-server-rhel-${RSTUDIO_VERSION}-x86_64.rpm \
+  && rm -f rstudio-server-rhel-${RSTUDIO_VERSION}-x86_64.rpm \
   && yum clean all \
   && rm -rf /var/cache/yum \
   && mkdir /home/rstudio-server \
