--- a/r-ver/Dockerfile.rhel
+++ b/r-ver/Dockerfile.rhel
@@ -1,12 +1,12 @@
-FROM registry.access.redhat.com/ubi7/ubi-init:latest
+FROM registry.access.redhat.com/rhel7:latest
 
 LABEL org.label-schema.license="GPL-2.0" \
       maintainer="Dan Clark <danclark@redhat.com>"
 
 ARG R_VERSION
 ARG BUILD_DATE
-ENV BUILD_DATE=${BUILD_DATE:-2019-03-11}
-ENV R_VERSION=${R_VERSION:-3.5.2} \
+ENV BUILD_DATE=${BUILD_DATE:-2019-08-13}
+ENV R_VERSION=${R_VERSION:-3.6.0} \
     LC_ALL=en_US.UTF-8 \
     LANG=en_US.UTF-8 \
     TERM=xterm
