--- a/r-ver/Dockerfile.rhel
+++ b/r-ver/Dockerfile.rhel
@@ -11,8 +11,8 @@ ENV R_VERSION=${R_VERSION:-3.6.0} \
     LANG=en_US.UTF-8 \
     TERM=xterm
 
-RUN date \
-##  && yum -y update \
+RUN  date \
+  && yum -y update \
   && yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm \
   && yum-config-manager --enable rhel-7-server-rpms \
   && yum-config-manager --enable rhel-7-server-extra-rpms \
