Fix missing deps

--- a/r-ver/3.5.2/Dockerfile.rhel
+++ b/r-ver/3.5.2/Dockerfile.rhel
@@ -12,14 +12,34 @@ ENV R_VERSION=${R_VERSION:-3.5.2} \
     TERM=xterm
 
 RUN date \
-##  && yum -y update \
+  && yum -y update \
   && yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm \
   && yum-config-manager --enable rhel-7-server-rpms \
   && yum-config-manager --enable rhel-7-server-extra-rpms \
   && yum-config-manager --enable rhel-7-server-optional-rpms \
   && yum -y install R \
   && yum clean all \
-  && rm -rf /var/cache/yum
+  && rm -rf /var/cache/yum \
+  ## Add a default CRAN mirror
+  && echo "options(repos = c(CRAN = 'https://cran.rstudio.com/'), download.file.method = 'curl')" >> /usr/lib64/R/etc/Rprofile.site \
+  ## Add a library directory (for user-installed packages)
+  && mkdir -p /usr/lib64/R/library \
+  #&& chown root:staff /usr/lib64/R/library \
+  #&& chmod g+wx /usr/lib64/R/library \
+  ## Fix library path
+  #&& echo "R_LIBS_USER='/usr/lib64/R/library'" >> /usr/lib64/R/etc/Renviron \
+  #&& echo "R_LIBS=\${R_LIBS-'/usr/lib64/R/library:/usr/lib64/R/library:/usr/lib/R/library'}" >> /usr/lib64/R/etc/Renviron \
+  ## install packages from date-locked MRAN snapshot of CRAN
+  && [ -z "$BUILD_DATE" ] && BUILD_DATE=$(TZ="America/New_York" date -I) || true \
+  && MRAN=https://mran.microsoft.com/snapshot/${BUILD_DATE} \
+  && echo MRAN=$MRAN >> /etc/environment \
+  && export MRAN=$MRAN \
+  && echo "options(repos = c(CRAN='$MRAN'), download.file.method = 'curl')" >> /usr/lib64/R/etc/Rprofile.site \
+  ## Use littler installation scripts
+  && Rscript -e "install.packages(c('littler', 'docopt'), repo = '$MRAN')" \
+  && ln -s /usr/lib64/R/library/littler/examples/install2.r /usr/local/bin/install2.r \
+  && ln -s /usr/lib64/R/library/littler/examples/installGithub.r /usr/local/bin/installGithub.r \
+  && ln -s /usr/lib64/R/library/littler/bin/r /usr/local/bin/r
 
 CMD ["R"]
 
