--- a/rstudio/3.5.2/Dockerfile.rhel
+++ b/rstudio/3.5.2/Dockerfile.rhel
@@ -1,4 +1,4 @@
-FROM quay.io/danclark/r-ver:3.5.2
+FROM quay.io/rocker/r-ver:rhel7-3.5.2
 
 ARG RSTUDIO_VERSION
 ENV RSTUDIO_VERSION=${RSTUDIO_VERSION:-1.1.463}
@@ -12,7 +12,7 @@ ENV PANDOC_TEMPLATES_VERSION=${PANDOC_TEMPLATES_VERSION:-2.6}
 ENV PASSWORD=${PASSWORD:-redhat1}
 
 ## Download and install RStudio server & dependencies
-RUN yum -y install wget \
+RUN yum -y install wget git \
   && wget https://download2.rstudio.org/rstudio-server-rhel-${RSTUDIO_VERSION}-x86_64.rpm \
   && yum -y install rstudio-server-rhel-${RSTUDIO_VERSION}-x86_64.rpm \
   && rm -f rstudio-server-rhel-${RSTUDIO_VERSION}-x86_64.rpm \
@@ -21,7 +21,19 @@ RUN yum -y install wget \
   && mkdir /home/rstudio-server \
   && chown 'rstudio-server:rstudio-server' /home/rstudio-server \
   && echo 'auth-minimum-user-id=0' >> /etc/rstudio/rserver.conf \
-  && echo "rstudio-server:$PASSWORD" | chpasswd 
+  && echo "rstudio-server:$PASSWORD" | chpasswd \
+  ## Symlink pandoc & standard pandoc templates for use system-wide
+  && ln -s /usr/lib/rstudio-server/bin/pandoc/pandoc /usr/local/bin \
+  && ln -s /usr/lib/rstudio-server/bin/pandoc/pandoc-citeproc /usr/local/bin \
+  && git clone --recursive --branch ${PANDOC_TEMPLATES_VERSION} https://github.com/jgm/pandoc-templates \
+  && mkdir -p /opt/pandoc/templates \
+  && cp -r pandoc-templates*/* /opt/pandoc/templates && rm -rf pandoc-templates* \
+  && mkdir /root/.pandoc && ln -s /opt/pandoc/templates /root/.pandoc/templates \
+  ## use more robust file locking to avoid errors when using shared volumes:
+  && echo 'lock-type=advisory' >> /etc/rstudio/file-locks \
+  ## configure git not to request password each time
+  && git config --system credential.helper 'cache --timeout=3600' \
+  && git config --system push.default simple
 
 #COPY userconf.sh /etc/cont-init.d/userconf
 
