Update base image and fix package name

--- a/tidyverse/3.5.2/Dockerfile.rhel
+++ b/tidyverse/3.5.2/Dockerfile.rhel
@@ -1,4 +1,4 @@
-FROM quay.io/danclark/rstudio:3.5.2
+FROM quay.io/rocker/rstudio:rhel7-3.5.2
 
 RUN yum -y install \
   libxml2-devel \
@@ -9,7 +9,7 @@ RUN yum -y install \
 ##  libmariadb-client-lgpl-dev \
   libpqxx-devel \
   libssh-devel \
-  unixodbc-dev \
+  unixODBC-devel \
   && yum clean all \
   && rm -rf /var/cache/yum \
   && Rscript --verbose -e 'install.packages(c("tidyverse", "dplyr", "devtools", "formatR", "remotes", "selectr", "caTools", "BiocManager"), repos="http://cran.r-project.org")'
