--- a/r-ver/3.5.2/Dockerfile.rhel
+++ b/r-ver/3.5.2/Dockerfile.rhel
@@ -29,6 +29,8 @@ RUN date \
   ## Fix library path
   #&& echo "R_LIBS_USER='/usr/lib64/R/library'" >> /usr/lib64/R/etc/Renviron \
   #&& echo "R_LIBS=\${R_LIBS-'/usr/lib64/R/library:/usr/lib64/R/library:/usr/lib/R/library'}" >> /usr/lib64/R/etc/Renviron \
+  ## Make installation of R packages multithreaded or it takes forever
+  && sed -i "s/'make'/'make -j4'/" /usr/lib64/R/etc/Renviron \
   ## install packages from date-locked MRAN snapshot of CRAN
   && [ -z "$BUILD_DATE" ] && BUILD_DATE=$(TZ="America/New_York" date -I) || true \
   && MRAN=https://mran.microsoft.com/snapshot/${BUILD_DATE} \
