--- a/tidyverse/3.5.2/Dockerfile.rhel
+++ b/tidyverse/3.5.2/Dockerfile.rhel
@@ -12,5 +12,5 @@ RUN yum -y install \
   unixODBC-devel \
   && yum clean all \
   && rm -rf /var/cache/yum \
-  && Rscript --verbose -e 'install.packages(c("tidyverse", "dplyr", "devtools", "formatR", "remotes", "selectr", "caTools", "BiocManager"), repos="http://cran.r-project.org")'
+  && Rscript --verbose -e 'install.packages(c("tidyverse", "dplyr", "devtools", "formatR", "remotes", "selectr", "caTools", "BiocManager"))'
 
