--- a/tidyverse/Dockerfile.rhel
+++ b/tidyverse/Dockerfile.rhel
@@ -7,8 +7,8 @@ RUN yum -y install \
   mariadb-devel \
   libpqxx-devel \
   libssh-devel \
-  unixodbc-dev \
+  unixODBC-devel \
   && yum clean all \
   && rm -rf /var/cache/yum \
-  && Rscript --verbose -e 'install.packages(c("tidyverse", "dplyr", "devtools", "formatR", "remotes", "selectr", "caTools", "BiocManager"), repos="http://cran.r-project.org")'
+  && Rscript --verbose -e 'install.packages(c("tidyverse", "dplyr", "devtools", "formatR", "remotes", "selectr", "caTools", "BiocManager"))'
 
